--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -18,12 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "001e0507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Tôi tên là Chương\n",
+      "Quê tôi ở Nha Trang\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1 bài 1 ở đây"
+    "print(\"Hello\")\n",
+    "print(\"Tôi tên là Chương\")\n",
+    "print(\"Quê tôi ở Nha Trang\")"
    ]
   },
   {
@@ -39,9 +51,24 @@
    "execution_count": null,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diện tích hình chữ nhật là:  2000\n",
+      "Chu vi hình chữ nhật là:  240\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1  bài 2 ở đây"
+    "# Bài 2: Viết chương trình nhập từ bàn phím 2 cạnh của hình chữ nhật. Tính và xuất ra màn hình chu vi và diện tích của hình chữ nhật.\n",
+    "chieudai = float(input(\"Nhập chiều dài: \"))\n",
+    "chieurong = float(input(\"Nhập chiều rộng: \"))\n",
+    "dientich = chieudai * chieurong\n",
+    "chuvi = (chieudai + chieurong) * 2\n",
+    "print(\"Diện tích hình chữ nhật là: \", dientich)\n",
+    "print(\"Chu vi hình chữ nhật là: \", chuvi)"
    ]
   },
   {
@@ -57,9 +84,40 @@
    "execution_count": null,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\n",
+      "Sống không giận, không hờn không oán trách\n",
+      "Sống mỉm cười, với thử thách chông gai\n",
+      "Sống vươn lên, theo kịp ánh ban mai\n",
+      "Sống chan hòa, với những người chung sống.\n",
+      "\n",
+      "Sống là động, nhưng lòng luôn bất động\n",
+      "Sống là thương, nhưng lòng chẳng vấn vương\n",
+      "Sống yên vui, danh lợi mãi coi thường\n",
+      "Tâm bất biến, giữa dòng đời vạn biến.\n",
+      "\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1  bài 3 ở đây"
+    "#Bài 3: Xuất bài thơ sau ra màn hình:\n",
+    "print('\"')\n",
+    "print(f\"Sống không giận, không hờn không oán trách\")\n",
+    "print(f\"Sống mỉm cười, với thử thách chông gai\")\n",
+    "print(f\"Sống vươn lên, theo kịp ánh ban mai\")\n",
+    "print(f\"Sống chan hòa, với những người chung sống.\")\n",
+    "\n",
+    "print()  # Dòng trống giữa 2 khổ thơ\n",
+    "\n",
+    "print(f\"Sống là động, nhưng lòng luôn bất động\")\n",
+    "print(f\"Sống là thương, nhưng lòng chẳng vấn vương\")\n",
+    "print(f\"Sống yên vui, danh lợi mãi coi thường\")\n",
+    "print(\"Tâm bất biến, giữa dòng đời vạn biến.\")\n",
+    "print('\"')"
    ]
   },
   {
@@ -72,12 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phương trình có 2 nghiệm phân biệt:  -0.5821091654199726 và -1.7178908345800274\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 1 bài 4 ở đây"
+    "import math\n",
+    "a= int(input(\"Nhập a: \"))\n",
+    "b= int(input(\"Nhập b: \"))\n",
+    "c= int(input(\"Nhập c: \"))\n",
+    "delta = b**2 - 4*a*c\n",
+    "if delta< 0:\n",
+    "    print(\"Phương trình vô nghiệm\")\n",
+    "elif delta == 0:\n",
+    "    x = -b/(2*a)\n",
+    "    print(\"Phương trình có nghiệm kép: \", x)\n",
+    "else:\n",
+    "    x1 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "    x2 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "    print(\"Phương trình có 2 nghiệm phân biệt: \", x1, \"và\", x2) "
    ]
   },
   {
@@ -90,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0e0172f7",
    "metadata": {},
    "outputs": [],
@@ -106,8 +185,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
