--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"\n",
+      "\"...\n",
       "Sống không giận, không hờn không oán trách\n",
       "Sống mỉm cười, với thử thách chông gai\n",
       "Sống vươn lên, theo kịp ánh ban mai\n",
@@ -99,13 +99,13 @@
       "Sống là thương, nhưng lòng chẳng vấn vương\n",
       "Sống yên vui, danh lợi mãi coi thường\n",
       "Tâm bất biến, giữa dòng đời vạn biến.\n",
-      "\"\n"
+      "...\"\n"
      ]
     }
    ],
    "source": [
     "#Bài 3: Xuất bài thơ sau ra màn hình:\n",
-    "print('\"')\n",
+    "print('\"...')\n",
     "print(f\"Sống không giận, không hờn không oán trách\")\n",
     "print(f\"Sống mỉm cười, với thử thách chông gai\")\n",
     "print(f\"Sống vươn lên, theo kịp ánh ban mai\")\n",
@@ -117,7 +117,7 @@
     "print(f\"Sống là thương, nhưng lòng chẳng vấn vương\")\n",
     "print(f\"Sống yên vui, danh lợi mãi coi thường\")\n",
     "print(\"Tâm bất biến, giữa dòng đời vạn biến.\")\n",
-    "print('\"')"
+    "print('...\"')"
    ]
   },
   {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -138,25 +138,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Phương trình có 2 nghiệm phân biệt:  -0.5821091654199726 và -1.7178908345800274\n"
+      "Giá trị delta = -44.0\n",
+      "Delta < 0 nên không có căn bậc hai thực\n"
      ]
     }
    ],
    "source": [
     "import math\n",
-    "a= int(input(\"Nhập a: \"))\n",
-    "b= int(input(\"Nhập b: \"))\n",
-    "c= int(input(\"Nhập c: \"))\n",
+    "a = float(input(\"Nhập hệ số a: \"))\n",
+    "b = float(input(\"Nhập hệ số b: \"))\n",
+    "c = float(input(\"Nhập hệ số c: \"))\n",
     "delta = b**2 - 4*a*c\n",
-    "if delta< 0:\n",
-    "    print(\"Phương trình vô nghiệm\")\n",
-    "elif delta == 0:\n",
-    "    x = -b/(2*a)\n",
-    "    print(\"Phương trình có nghiệm kép: \", x)\n",
+    "print(\"Giá trị delta =\", delta)\n",
+    "if delta >= 0:\n",
+    "    can_delta = math.sqrt(delta)\n",
+    "    print(\"Căn delta =\", can_delta)\n",
     "else:\n",
-    "    x1 = (-b + math.sqrt(delta)) / (2*a)\n",
-    "    x2 = (-b - math.sqrt(delta)) / (2*a)\n",
-    "    print(\"Phương trình có 2 nghiệm phân biệt: \", x1, \"và\", x2) "
+    "    print(\"Delta < 0 nên không có căn bậc hai thực\")"
    ]
   },
   {
