--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
@@ -105,17 +105,18 @@
    ],
    "source": [
     "#Bài 3: Xuất bài thơ sau ra màn hình:\n",
+    "song = \"Sống\"\n",
     "print('\"...')\n",
-    "print(f\"Sống không giận, không hờn không oán trách\")\n",
-    "print(f\"Sống mỉm cười, với thử thách chông gai\")\n",
-    "print(f\"Sống vươn lên, theo kịp ánh ban mai\")\n",
-    "print(f\"Sống chan hòa, với những người chung sống.\")\n",
+    "print(f\"{song} không giận, không hờn không oán trách\")\n",
+    "print(f\"{song} mỉm cười, với thử thách chông gai\")\n",
+    "print(f\"{song} vươn lên, theo kịp ánh ban mai\")\n",
+    "print(f\"{song} chan hòa, với những người chung sống.\")\n",
     "\n",
     "print()  # Dòng trống giữa 2 khổ thơ\n",
     "\n",
-    "print(f\"Sống là động, nhưng lòng luôn bất động\")\n",
-    "print(f\"Sống là thương, nhưng lòng chẳng vấn vương\")\n",
-    "print(f\"Sống yên vui, danh lợi mãi coi thường\")\n",
+    "print(f\"{song} là động, nhưng lòng luôn bất động\")\n",
+    "print(f\"{song} là thương, nhưng lòng chẳng vấn vương\")\n",
+    "print(f\"{song} yên vui, danh lợi mãi coi thường\")\n",
     "print(\"Tâm bất biến, giữa dòng đời vạn biến.\")\n",
     "print('...\"')"
    ]
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -138,23 +139,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Giá trị delta = -44.0\n",
-      "Delta < 0 nên không có căn bậc hai thực\n"
+      "Giá trị delta = -8.0\n",
+      "Căn delta = 2.8284271247461903j\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "import math, cmath\n",
     "a = float(input(\"Nhập hệ số a: \"))\n",
     "b = float(input(\"Nhập hệ số b: \"))\n",
     "c = float(input(\"Nhập hệ số c: \"))\n",
     "delta = b**2 - 4*a*c\n",
     "print(\"Giá trị delta =\", delta)\n",
-    "if delta >= 0:\n",
-    "    can_delta = math.sqrt(delta)\n",
-    "    print(\"Căn delta =\", can_delta)\n",
-    "else:\n",
-    "    print(\"Delta < 0 nên không có căn bậc hai thực\")"
+    "print(\"Căn delta =\", cmath.sqrt(delta))"
    ]
   },
   {
@@ -167,12 +164,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0e0172f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phép tính cộng: 10\n",
+      "Phép tính trừ: -2\n",
+      "Phép tính nhân: 24\n",
+      "Phép tính chia: 0.6666666666666666\n",
+      "Lũy thừa: 4096.0\n",
+      "Căn bậc hai của a: 2.0\n",
+      "Căn bậc hai của b: 2.449489742783178\n",
+      "Hàm sin: 0.49999999999999994\n",
+      "Hàm cos: 0.8660254037844387\n",
+      "Hàm tan: 0.5773502691896257\n",
+      "Hàm logarit cơ số 10: 0.6989700043360189\n",
+      "Hàm logarit tùy chọn 2.0 : 2.321928094887362\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 1  bài làm thêm ở đây "
+    "# code lab 1  bài làm thêm ở đây \n",
+    "import cmath, math\n",
+    "a = int(input(\"Nhập hệ số a: \"))\n",
+    "b = int(input(\"Nhập hệ số b: \"))\n",
+    "x = int(input(\"Nhập hệ số x: \"))\n",
+    "# Phép tính cộng\n",
+    "print(\"Phép tính cộng:\", a + b)\n",
+    "# Phép tính trừ\n",
+    "print(\"Phép tính trừ:\", a - b)\n",
+    "# Phép tính nhân\n",
+    "print(\"Phép tính nhân:\", a * b)\n",
+    "# Phép tính chia\n",
+    "print(\"Phép tính chia:\", a / b)\n",
+    "# Lũy thừa\n",
+    "print(\"Lũy thừa:\", math.pow(a, b))\n",
+    "# Căn bậc hai\n",
+    "print(\"Căn bậc hai của a:\", math.sqrt(abs(a)))\n",
+    "print(\"Căn bậc hai của b:\", math.sqrt(abs(b)))\n",
+    "# Hàm lượng giác\n",
+    "goc_do = float(input(\"Nhập góc (độ): \"))\n",
+    "rad = math.radians(goc_do)\n",
+    "print(\"Hàm sin:\", math.sin(rad))\n",
+    "print(\"Hàm cos:\", math.cos(rad))\n",
+    "print(\"Hàm tan:\", math.tan(rad))\n",
+    "# Hàm logarit\n",
+    "base = int(input(\"Nhập cơ số (base) > 0: \"))\n",
+    "print(\"Hàm logarit cơ số 10:\", math.log10(x))\n",
+    "print(\"Hàm logarit cơ số\", base, \":\", math.log(x, base))"
    ]
   }
  ],
