--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0e0172f7",
    "metadata": {},
    "outputs": [
@@ -172,18 +172,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Phép tính cộng: 10\n",
-      "Phép tính trừ: -2\n",
-      "Phép tính nhân: 24\n",
-      "Phép tính chia: 0.6666666666666666\n",
-      "Lũy thừa: 4096.0\n",
-      "Căn bậc hai của a: 2.0\n",
-      "Căn bậc hai của b: 2.449489742783178\n",
+      "Phép tính cộng: 3\n",
+      "Phép tính trừ: -1\n",
+      "Phép tính nhân: 2\n",
+      "Phép tính chia: 0.5\n",
+      "Lũy thừa: 1.0\n",
+      "Căn bậc hai của a: 1.0\n",
+      "Căn bậc hai của b: 1.4142135623730951\n",
       "Hàm sin: 0.49999999999999994\n",
       "Hàm cos: 0.8660254037844387\n",
       "Hàm tan: 0.5773502691896257\n",
-      "Hàm logarit cơ số 10: 0.6989700043360189\n",
-      "Hàm logarit tùy chọn 2.0 : 2.321928094887362\n"
+      "Hàm logarit cơ số 10: 0.47712125471966244\n",
+      "Hàm logarit cơ số 2 : 1.5849625007211563\n"
      ]
     }
    ],
