--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "001e0507",
    "metadata": {},
    "outputs": [
@@ -27,13 +27,13 @@
      "output_type": "stream",
      "text": [
       "Thoát chương trình\n",
-      "Dãy số hiện tại: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "Dãy số sau khi sắp xếp: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "Dãy số sau khi sắp xếp ngược: [9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
-      "Số lớn nhất trong dãy số là: 9\n",
+      "Dãy số hiện tại: [1, 2, 3, 4, 5, 6, 7]\n",
+      "Dãy số sau khi sắp xếp: [1, 2, 3, 4, 5, 6, 7]\n",
+      "Dãy số sau khi sắp xếp ngược: [7, 6, 5, 4, 3, 2, 1]\n",
+      "Số lớn nhất trong dãy số là: 7\n",
       "Số nhỏ nhất trong dãy số là: 1\n",
-      "Tổng các số chia hết cho 3 là: 18\n",
-      "Trung bình các số chia hết cho 3 là: 6.0\n"
+      "Tổng các số chia hết cho 3 là: 9\n",
+      "Trung bình các số chia hết cho 3 là: 4.5\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa9cb39f",
    "metadata": {},
    "outputs": [
@@ -97,18 +97,9 @@
      "output_type": "stream",
      "text": [
       "Sinh viên thứ 1:\n",
-      "Họ tên sinh viên: Đặng Lê Huy Chương\n",
-      "Điểm sinh viên: 8.5\n",
-      "Xếp loại: Giỏi\n",
-      "Sinh viên thứ 2:\n",
-      "Họ tên sinh viên: Trần Văn Trương\n",
-      "Điểm sinh viên: 9.0\n",
-      "Xếp loại: Xuất sắc\n",
-      "Sinh viên thứ 3:\n",
-      "Họ tên sinh viên: Phan Nguyễn Hoàng Tùng\n",
-      "Điểm sinh viên: 9.0\n",
-      "Xếp loại: Xuất sắc\n",
-      "Danh sách sinh viên: [{'Họ tên': 'Đặng Lê Huy Chương', 'Điểm': 8.5}, {'Họ tên': 'Trần Văn Trương', 'Điểm': 9.0}, {'Họ tên': 'Phan Nguyễn Hoàng Tùng', 'Điểm': 9.0}]\n"
+      "Họ tên sinh viên: chương\n",
+      "Điểm sinh viên: 4.0\n",
+      "Xếp loại: Yếu\n"
      ]
     }
    ],
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
