--- a/ASM_GD2.ipynb
+++ b/ASM_GD2.ipynb
@@ -2,30 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c6031974",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "===== MENU QUẢN LÝ NHÂN VIÊN =====\n",
-      "1. Nhập danh sách nhân viên và lưu vào file\n",
-      "2. Đọc thông tin nhân viên từ file và xuất ra màn hình\n",
-      "3. Tìm và hiển thị nhân viên theo mã\n",
-      "4. Xóa nhân viên theo mã\n",
-      "5. Cập nhật thông tin nhân viên\n",
-      "6. Tìm nhân viên theo khoảng lương\n",
-      "7. Sắp xếp nhân viên theo họ tên\n",
-      "8. Sắp xếp nhân viên theo thu nhập\n",
-      "9. Xuất 5 nhân viên có thu nhập cao nhất\n",
-      "0. Thoát chương trình\n",
-      "Thoát chương trình.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ASM_GD2\n",
     "\n",
@@ -67,9 +47,7 @@
     "            ASM_GD2.thoat()\n",
     "            break\n",
     "        else:\n",
-    "            print(\">> Lựa chọn không hợp lệ, vui lòng chọn lại!\")\n",
-    "\n",
-    "menu()"
+    "            print(\">> Lựa chọn không hợp lệ, vui lòng chọn lại!\")\n"
    ]
   }
  ],
